Attempt to fix layout overflow problem

--- a/app/assets/stylesheets/landing/desktop/landing_page.css.scss
+++ b/app/assets/stylesheets/landing/desktop/landing_page.css.scss
@@ -60,7 +60,7 @@ html {
 
     .house-background {
       position: relative;
-      height: auto;
+      height: 720px;
       max-width: 980px;
       left: 0;
       margin: 0 auto;
@@ -275,13 +275,11 @@ html {
 
     .content {
       width: 100%;
-      height: 100%;
+      // height: 100%;
       text-align: justify;
       position: absolute;
-      top: 90%;
       margin: 0 auto;
       background-color: $mule-grey;
-      z-index: 2;
 
       .testimonials {
         font-family: 'Roboto';
