--- a/app/assets/stylesheets/landing/mobile/_landing_page.css.scss
+++ b/app/assets/stylesheets/landing/mobile/_landing_page.css.scss
@@ -37,7 +37,7 @@ and (max-device-width : 568px) {
 
 	    .house-background {
 	    	position: relative;
-	    	height: auto;
+	    	height:  980px;
 	    	max-width: 980px;
 	    	left: 0;
 	    	margin: 0 auto;
@@ -209,7 +209,6 @@ and (max-device-width : 568px) {
 	    }
 
 	    .content {
-	    	top: 1080px;
 
 	    	.testimonials {
 	    		height: auto;
